--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,10 +1,10 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8"/>
+<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>Classmate</title>
 
 <link rel="stylesheet" type="text/css" href="bootstrap-3.3.5-dist/css/bootstrap.min.css" />
@@ -42,12 +42,12 @@ body {
 							<div class="col-sm-6 form-group">
 								<label>First Name</label> <input type="text"
 									placeholder="Enter First Name Here.." class="form-control"
-									required="">
+									required=""/>
 							</div>
 							<div class="col-sm-6 form-group">
 								<label>Last Name</label> <input type="text"
 									placeholder="Enter Last Name Here.." class="form-control"
-									required="">
+									required=""/>
 							</div>
 						</div>
 
@@ -55,74 +55,62 @@ body {
 						<div class="form-group">
 							<label>Phone Number</label> <input type="number"
 								placeholder="Enter Phone Number Here.." class="form-control"
-								required="">
+								required=""/>
 						</div>
 
 						<div class="form-group">
 							<label>Email Address</label> <input type="text"
 								placeholder="Enter Email Address Here.." class="form-control"
-								required="">
+								required=""/>
 						</div>
 
 						<div class="form-group">
 							<label>Password</label> <input type="password"
-								placeholder="Password" class="form-control" required="">
+								placeholder="Password" class="form-control" required=""/>
 							<p class="help-block">Password should be at least 8
 								characters</p>
 						</div>
 						<div class="form-group">
 							<label> Confirm Password</label> <input type="password"
-								placeholder="Confirm password" class="form-control" required="">
+								placeholder="Confirm password" class="form-control" required=""/>
 
 						</div>
-
 						<div class="form-group">
 							<label style="margin-right: 20px;">Gender</label> <label
 								class="radio-inline"> <input type="radio"
-								name="optradio" class="form-control">Male
+								name="optradio" class="form-control"/>Male
 							</label> <label class="radio-inline"> <input type="radio"
-								name="optradio" class="form-control">Female
+								name="optradio" class="form-control"/>Female
 							</label>
-
 						</div>
-
-
 						<div class="form-group">
 							<label>Institute</label> <input type="text"
-								placeholder="Institute" class="form-control" required="">
-
+								placeholder="Institute" class="form-control" required=""/>
 						</div>
 						<div class="form-group">
 							<label>Course</label> <select class="form-control">
 								<option>SSC-CGL</option>
 							</select>
-
 						</div>
-
 						<div class="row">
 							<div class="col-sm-4 form-group">
 								<label>Country</label> <input type="text"
 									placeholder="Enter Country Name Here.." class="form-control"
-									required="">
+									required=""/>
 							</div>
 							<div class="col-sm-4 form-group">
 								<label>State</label> <input type="text"
 									placeholder="Enter State Name Here.." class="form-control"
-									required="">
+									required=""/>
 							</div>
-
 							<div class="col-sm-4 form-group">
 								<label>City</label> <input type="text"
 									placeholder="Enter City Name Here.." class="form-control"
-									required="">
+									required=""/>
 							</div>
 						</div>
 						<button type="button" class="btn btn-lg btn-info">Sign Up</button>
 						<button type="button" class="btn btn-lg btn-info">Cancel</button>
-
-
-
-
 					</div>
 				</form>
 			</div>
