added the images required and changed the path of the images in home.html and registration.html

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -31,13 +31,13 @@
 							</ol>
 							<div class="carousel-inner">
 								<div class="item active">
-									<img class="img-rounded" src="app/images/images.JPG" alt="Hub City Winner" title="Hub City Winner" />
+									<img class="img-rounded" src="img/images.JPG" alt="Hub City Winner" title="Hub City Winner" />
 								</div>
 								<div class="item">
-									<img class="img-rounded" src="app/images/images.JPG" alt="Hub City Winner" title="Hub City Winner" />
+									<img class="img-rounded" src="img/images.JPG" alt="Hub City Winner" title="Hub City Winner" />
 								</div>
 								<div class="item">
-									<img class="img-rounded" src="app/images/images.JPG" alt="Hub City Winner" title="Hub City Winner" />
+									<img class="img-rounded" src="img/images.JPG" alt="Hub City Winner" title="Hub City Winner" />
 								</div>
 							</div>
 
