--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -18,7 +18,7 @@ input[type=radio] {
 }
 
 body {
-	background: url(app/images/registration-bg.jpg) no-repeat center center
+	background: url(img/registration-bg.jpg) no-repeat center center
 		fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
