--- a/src/main/resources/templates/navigationbar.html
+++ b/src/main/resources/templates/navigationbar.html
@@ -13,24 +13,19 @@
 						<li class="hidden"></li>
 						<li class="space"><a href="home.html">Home</a></li>
 						<li class="dropdown space"><a href="aboutus.html">About Us</a></li>
-						<li class="dropdown space"><a href="#" class="dropdown=toggle" data-toggle="dropdown">Classes<b class="caret"></b></a>
-							<ul class="dropdown-menu">
-								<li><a href="#liveclasses.html">Live Classes</a></li>
-								<li><a href="#newbatches.html">New Batches</a></li>
-								<li><a href="#schedule.html">Schedule</a></li>
-							</ul></li>
+						<li class="dropdown space"><a href="classes.html">Classes</a></li>
 						<li class="dropdown space"><a href="#" class="dropdown=toggle" data-toggle="dropdown">Tests<b class="caret"></b></a>
 							<ul class="dropdown-menu">
 								<li><a href="test.html">Online Tests</a></li>
 								<li><a href="#testseries.html">Test Series</a></li>
 
 							</ul></li>
-						<li class="dropdown space"><a href="#" class="dropdown=toggle" data-toggle="dropdown">Material<b class="caret"></b></a>
+						<li class="dropdown space"><a href="material.html" class="dropdown=toggle" data-toggle="dropdown">Material<b class="caret"></b></a>
 							<ul class="dropdown-menu">
-								<li><a href="#previouspapers.html">Previous Papers</a></li>
+								<li><a href="previousPapers.html">Previous Papers</a></li>
 
 							</ul></li>
-						<li class="space"><a href="#contactus.html">Contact Us</a></li>
+						<li class="space"><a href="contactUs.html">Contact Us</a></li>
 					</ul>
 				</div>
 			</div>
