--- a/src/main/resources/templates/classes.html
+++ b/src/main/resources/templates/classes.html
@@ -2,13 +2,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Classmate</title>
 
-<link href="lib/css/bootstrap.min.css" rel="stylesheet">
-<link href="app/css/classmate.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="bootstrap-3.3.5-dist/css/bootstrap.min.css" />
+<link rel="stylesheet" type="text/css" href="css/classmate.css" />
 </head>
 <style>
 tbody td {
@@ -49,18 +49,18 @@ tbody td {
 
 											<div class="form-group">
 												<label>Name</label> <input type="text" placeholder="Name"
-													class="form-control" required="">
+													class="form-control" required="" />
 											</div>
 
 											<div class="form-group">
 												<label>Mobile Number</label> <input type="number"
 													placeholder="Mobile Number" class="form-control"
-													required="">
+													required="" />
 											</div>
 
 											<div class="form-group">
 												<label>Email Address</label> <input type="email"
-													placeholder="Email" class="form-control" required="">
+													placeholder="Email" class="form-control" required="" />
 											</div>
 
 											<div class="form-group">
@@ -75,14 +75,14 @@ tbody td {
 
 											<div class="form-group">
 												<label>Amount</label> <input type="number"
-													placeholder="Amount" class="form-control" required="">
+													placeholder="Amount" class="form-control" required="" />
 											</div>
 
 											<div class="form-group">
 												<label>Photo</label>
 												<div class="controls">
 													<input id="filebutton" name="filebutton" class="input-file"
-														type="file">
+														type="file" />
 												</div>
 											</div>
 
@@ -119,79 +119,79 @@ tbody td {
 													<td>Ashok Nagar</td>
 													<td>02.10.2015</td>
 													<td>9.10.2015</td>
-												<tr>
+												</tr>
 												<tr>
 													<td>SSC CGL Tier II 2015</td>
-													<td>English only grammar </br>6:30-8:30am
+													<td>English only grammar 6:30-8:30am
 													</td>
 													<td>Ashok Nagar</td>
 													<td>16.09.2015</td>
 													<td>6.10.2015</td>
-												<tr>
+												</tr>
 												<tr>
 													<td>SSC CGL Tier II 2015</td>
-													<td>Arithmetic 10:30am - 1:30am </br>6:30-8:30am
+													<td>Arithmetic 10:30am - 1:30am 6:30-8:30am
 													</td>
 													<td>Ashok Nagar</td>
 													<td>13.09.2015</td>
 													<td>2.10.2015</td>
+												</tr>
 												<tr>
-												<tr>
-													<td>SSC CGL & CHSL 2015*</td>
-													<td>8:15-10:45am & 11:15-1:45pm</td>
+													<td>SSC CGL &nbsp; CHSL 2015*</td>
+													<td>8:15-10:45am &nbsp; 11:15-1:45pm</td>
 													<td>Ashok Nagar</td>
 													<td>24.08.2015</td>
 													<td>10.10.2015</td>
-												<tr>
+												</tr>
 												<tr>
 													<td>SSC CGL Tier I 2016*</td>
-													<td>8:15-10:45am & 11:15-1:45pm</td>
+													<td>8:15-10:45am &nbsp; 11:15-1:45pm</td>
 													<td>DilsukhNagar</td>
 													<td>28.08.2015</td>
 													<td>12.10.2015</td>
-												<tr>
+												</tr>
 												<tr>
 													<td>SSC CHSL 2015*</td>
-													<td>8:15-10:45am & 11:15-1:45pm</td>
+													<td>8:15-10:45am &nbsp; 11:15-1:45pm</td>
 													<td>DilsukhNagar</td>
 													<td>28.08.2015</td>
 													<td>12.10.2015</td>
-												<tr>
+												</tr>
 												<tr>
 													<td>SSC CGL Tier II 2015*</td>
-													<td>Monday-Saturday 6:00-9:00 pm</br>Sunday:2:30-5:30 pm &
+													<td>Monday-Saturday 6:00-9:00 pm Sunday:2:30-5:30 pm &nbsp;
 														6:00-9:00 pm
 													</td>
 													<td>Ashok Nagar</td>
 													<td>28.08.2015</td>
 													<td>03.10.2015</td>
-												<tr>
+												</tr>
 												<tr>
 													<td>SSC CGL Tier II 2015*</td>
-													<td>Monday-Saturday 6:00-9:00 pm</br>Sunday:2:30-5:30 pm &
+													<td>Monday-Saturday 6:00-9:00 pm Sunday:2:30-5:30 pm &nbsp;
 														6:00-9:00 pm
 													</td>
 													<td>DilsukhNagar</td>
 													<td>29.08.2015</td>
 													<td>04.10.2015</td>
-												<tr>
+												</tr>
 												<tr>
 													<td>SSC CGL Tier II 2015*</td>
-													<td>Monday-Saturday 2:30-5:30 pm</br>Sunday:2:30-5:30 pm &
+													<td>Monday-Saturday 2:30-5:30 pm Sunday:2:30-5:30 pm &nbsp;
 														6:00-9:00 pm
 													</td>
 													<td>Ashok Nagar</td>
 													<td>28.08.2015</td>
 													<td>03.10.2015</td>
+												</tr>
 												<tr>
-												<tr>
-													<td>SSC CGL Tier II </br>Statistical Investigator
+													<td>SSC CGL Tier II Statistical Investigator
 													</td>
 													<td>Monday-Saturday 6:00-9:00 pm</td>
 													<td>Ashok Nagar</td>
 													<td>05.09.2015</td>
 													<td>30.09.2015</td>
-												<tr>
+												</tr>
 											</tbody>
 
 										</table>
@@ -233,6 +233,10 @@ tbody td {
 
 				<div></div>
 
+</div>
+</div>
+</div>
+</div>
 
 				<script src="js/jquery-1.11.3.min.js"></script>
 				<script src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
