--- a/src/main/resources/templates/navigationbar.html
+++ b/src/main/resources/templates/navigationbar.html
@@ -25,7 +25,7 @@
 								<li><a href="previousPapers.html">Previous Papers</a></li>
 
 							</ul></li>
-						<li class="space"><a href="contactUs.html">Contact Us</a></li>
+						<li class="space"><a href="contactus">Contact Us</a></li>
 					</ul>
 				</div>
 			</div>
