--- a/src/main/resources/templates/navigationbar.html
+++ b/src/main/resources/templates/navigationbar.html
@@ -16,13 +16,13 @@
 						<li class="dropdown space"><a href="classes.html">Classes</a></li>
 						<li class="dropdown space"><a href="#" class="dropdown=toggle" data-toggle="dropdown">Tests<b class="caret"></b></a>
 							<ul class="dropdown-menu">
-								<li><a href="test.html">Online Tests</a></li>
+								<li><a href="login.html">Online Tests</a></li>
 								<li><a href="#testseries.html">Test Series</a></li>
 
 							</ul></li>
 						<li class="dropdown space"><a href="material.html" class="dropdown=toggle" data-toggle="dropdown">Material<b class="caret"></b></a>
 							<ul class="dropdown-menu">
-								<li><a href="previousPapers.html">Previous Papers</a></li>
+								<li><a href="previouspapers.html">Previous Papers</a></li>
 
 							</ul></li>
 						<li class="space"><a href="contactus">Contact Us</a></li>
